add eslint prettier husky lint-staged configuration

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write . --ignore-path .gitignore",
+    "lint": "eslint **/*.{ts,tsx} --ignore-path .gitignore",
+    "fix": "npm run format && npm run lint -- --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +42,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@mate-academy/eslint-config": "^0.0.25",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "prettier": "3.0.2"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "npm run lint"
   }
 }
