create burger menu

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,7 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "react"],
-  "rules": {}
+  "rules": {
+    "max-len":"off"
+  }
 }
