--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "swiper": "^10.2.0",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@mate-academy/eslint-config": "^0.0.25",
+    "@types/swiper": "^6.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "3.0.2",
