--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "swiper": "^10.2.0",
-    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -57,7 +56,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "3.0.2",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
   "lint-staged": {
     "*.{ts,tsx}": "npm run lint"
