--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^9.4.1",
     "typescript": "^4.9.5",
     "use-react-router-breadcrumbs": "^4.0.1",
@@ -55,6 +57,7 @@
   },
   "devDependencies": {
     "@mate-academy/eslint-config": "^0.0.25",
+    "@types/react-slick": "^0.23.10",
     "@types/swiper": "^6.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
