--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "i18next": "^23.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
